--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 ## Overview
 
-Welcome to the Clothing E-Commerce Site! This project aims to create a modern and responsive online shopping experience using Bootstrap, SASS, JavaScript, and HTML. Our site will showcase a diverse collection of stylish clothing, making it easy for customers to find and purchase their favorite items.
+Welcome to the Clothing E-Commerce Site! This project aims to create a modern and responsive online shopping experience using CSS, JavaScript, and HTML. Our site will showcase a diverse collection of stylish clothing, making it easy for customers to find and purchase their favorite items.
 Features
 
